# DX11B1

./: .gitignore  BUILD_INSTRUCTIONS.md  CMakeLists.txt  README.md  config-example.xml  generate_project.bat
.same/: analisis-tecnico.md  game-engine-plan.md  implementation-details.md  plan-continuacion.md  resumen-integracion.md  todos.md  validation-report.md
Assets/Models/: README.md
Assets/Textures/: README.md
Dependencies/rapidxml/: rapidxml_print.hpp
Shaders/: PixelShader.hlsl.txt  SimplePixelShader.hlsl.txt  SkinnedVertexShader.hlsl.txt  VertexShader.hlsl  VertexShader.hlsl.txt
Source/: main.cpp
Source/Animation/: AnimationClip.cpp  AnimationClip.h  AnimationController.cpp  AnimationController.h
Source/Core/: ConfigManager.cpp  ConfigManager.h  Engine.cpp  Engine.h  FileSystem.cpp  FileSystem.h  Logger.cpp  Logger.h  SettingsInterface.cpp  SettingsInterface.h  Timer.cpp  Timer.h  Window.cpp  Window.h  XmlManager.cpp  XmlManager.h
Source/Input/: InputManager.cpp  InputManager.h
Source/Math/: Matrix4.h  Vector3.h
Source/Mesh/: AssimpLoader.cpp  AssimpLoader.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshManager.cpp  MeshManager.h  Vertex.h
Source/Renderer/: D3D11Renderer.cpp  D3D11Renderer.h  Light.cpp  Light.h  ShadowMap.cpp  ShadowMap.h  Texture.cpp  Texture.h
Source/Scene/: Component.cpp  Component.h  Entity.cpp  Entity.h  LightComponent.h  MeshRenderer.cpp  MeshRenderer.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Transform.cpp  Transform.h
